Fixed the input boxes to fill extra space

--- a/public_html/css/form.css
+++ b/public_html/css/form.css
@@ -10,6 +10,7 @@ input[type="text"] {
     padding: 0.5rem 1rem;
     margin-bottom: 0.9rem;
 
+
 }
 
 /*https://www.w3schools.com/css/css_attribute_selectors.asp <- for attribute selection*/
@@ -24,4 +25,15 @@ input[type="reset"], input[type="submit"] {
 
 input[type="reset"]:hover, input[type="reset"]:focus, input[type="submit"]:hover, input[type="submit"]:focus {
     background-color: #F29F4E;
+}
+
+.form-row {
+
+  display: flex;
+
+}
+.form-row input {
+
+flex: 1;
+
 }
